# Hydra-Flow

./: .env.example  README.md  pyproject copy.toml  pyproject.toml
agent/: __init__.py  cleaner.py  coder.py  debugger.py  executor.py  planner.py  tools.py
agent/agent/: cleaner.py  coder.py  planner.py  tools.py
core/: __init__.py  checks.py  cli.py  context.py  contract.py  dag.py  store.py  task.py
core/core/: __init__.py  cli.py  loader.py  store.py  task.py
data/data/raw/: sales.csv
data/raw/: sales.csv
pipelines/: _base.yml  marketing.yml  sales.yml
pipelines/agent_generated/: revenue_v2.yml
runtime/: connections.yml  profiles.yml
sources/: __init__.py  base.py  csv.py  postgres.py  stripe.py
state/progress/: filtered_sales.json  keywords.json
transforms/: __init__.py
transforms/sales/: __init__.py  intermediate.py  staging.py
transforms/transforms/sales/: aggregate.py
ui/: __init__.py  api.py  index.html
